Working "exclude path" setting, and now, include and exclude paths work off the relative directory, which doesn't include the filename.