@@ -9,58 +9,86 @@ import com.jacstuff.musicplayer.service.helpers.PreferencesHelper;
 
 public class CursorCreator {
 
-   private  PreferencesHelper preferencesHelper;
-   private Context context;
 
-
-   public CursorCreator(Context context){
-       preferencesHelper = new PreferencesHelper(context);
-       this.context = context;
-   }
-
-    public Cursor createCursor(){
-        String includePath = preferencesHelper.getPathsStr();
-        String[] args = new String[]{"%" +  includePath + "%"};
-        String pathname = MediaStore.Audio.Media.DATA;
-        String selection = pathname + " LIKE ?";
-        //log("createCursor() selection str: " + selection);
+    public Cursor createCursor(PreferencesHelper preferencesHelper, Context context){
+        String includeArg = preferencesHelper.getPathsStr();
+        String excludeArg = preferencesHelper.getExcludeStr();
         String sortOrder = MediaStore.Audio.Media.DEFAULT_SORT_ORDER + " ASC";
         Uri collection = MediaStore.Audio.Media.getContentUri(MediaStore.VOLUME_EXTERNAL);
 
-        return context.getContentResolver().query(
-                collection,
-                createProjection(),
-                selection,
-                args,
-                sortOrder);
+        try {
+            return context.getContentResolver().query(
+                    collection,
+                    createProjection(),
+                    getSelection(includeArg, excludeArg),
+                    createArgs(includeArg, excludeArg),
+                    sortOrder);
+        }catch (RuntimeException e){
+            e.printStackTrace();
+        }
+        return null;
     }
 
 
+    public String getSelection(String includeArg, String excludeArg){
+        String includePath = includeArg == null ? "" : includeArg;
+        String excludePath = excludeArg == null ? "" : excludeArg;
 
-    public String getSelectionWithExclude(String selectionStr, String includePath){
-        String excludePath = preferencesHelper.getExcludeStr();
-        String andStr = includePath.trim().isEmpty() ? "" : " AND ";
-
-        //  String selectionWithExclude = excludePath.trim().isEmpty() ? selection : selection + "AND instr(" + pathname + ",'" + excludePath + "') < 1";
-        return "";
+        if(excludePath.isBlank() && includePath.isBlank()){
+            log("both include and exclude paths are blank");
+            return null;
+        }
+        if(includePath.isBlank()){
+            log("include path is blank, exclude path: " + excludePath);
+            return getExcludeStr();
+        }
+        if(excludePath.isBlank()){
+            log("exclude path is blank, include path: " + includePath);
+            return getIncludeStr();
+        }
+        log("neither paths are blank, include: " + includePath + " exclude: " + excludePath);
+        return getIncludeStr() + " AND " + getExcludeStr();
     }
 
 
-    public String getSelection(String includePath, String excludePath){
-        String pathname = MediaStore.Audio.Media.DATA;
-        String selection = pathname + " LIKE ?";
-       if(excludePath.isBlank()){
-           if(includePath.isBlank()){
-               return null;
-           }
-           return selection;
-       }
-       return selection + getExcludeStr(excludePath);
+    private void log(String msg){
+        System.out.println("^^^ CursorLoader: " + msg);
+    }
+
+    private String[] createArgs(String... args){
+        for(String arg : args){
+            if(arg != null && !arg.isBlank()){
+                break;
+            }
+            return null;
+        }
+        return args;
     }
 
 
-    public String getExcludeStr(String excludePath){
-       return  " AND instr(" + MediaStore.Audio.Media.DATA + ",'" + excludePath + "') < 1";
+    private String[] createArgs(String includeArg, String excludeArg){
+        String include = includeArg == null ? "" : includeArg;
+        String exclude = excludeArg == null ? "" : excludeArg;
+        if(include.isBlank() && exclude.isBlank()){
+            return null;
+        }
+        if(!include.isBlank() && !exclude.isBlank()){
+            return new String[]{"%" + include + "%", exclude};
+        }
+        if(!include.isBlank()){
+            return new String[]{"%" + include + "%"};
+        }
+        return new String[]{exclude};
+    }
+
+
+    private String getIncludeStr(){
+       return MediaStore.Audio.Media.RELATIVE_PATH + " LIKE ?";
+    }
+
+
+    private String getExcludeStr(){
+       return  "instr(" + MediaStore.Audio.Media.RELATIVE_PATH + ", ?) < 1";
     }
 
 
@@ -72,6 +100,7 @@ public class CursorCreator {
                 MediaStore.Audio.Media.ALBUM,
                 MediaStore.Audio.Media.DURATION,
                 MediaStore.Audio.Media.DATA,
+                MediaStore.Audio.Media.RELATIVE_PATH,
                 MediaStore.Audio.Media.CD_TRACK_NUMBER,
                 MediaStore.Audio.Media.GENRE,
                 MediaStore.Audio.Media.YEAR,
